[package]
name = "discodo"
version = "0.1.1"
authors = ["Akiacode <catry.me@gmail.com>"]
edition = "2018"
description = "Rust wrapper of Discodo"
license = "MIT"
repository = "https://github.com/akiacode/discodo.rs"
documentation = "https://docs.rs/discodo"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest =  { version = "0.11.2", features = ["blocking", "json"] }
serenity = { version = "0.10.5", features = ["client", "model"] }
tokio =  { version = "1.4.0" }
parking_lot = "0.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
tokio-tungstenite = "0.14.0"
async-trait = "0.1.48"
url = "2.2.1"